https://opentelemetry.io/docs/specs/semconv/attributes-registry/exception/#exception-escaped[OpenTelemetry no longer recommends to record non-escaping exceptions.]
** [BREAK] `add-exception!` and `add-interceptor-exception!` now assume the exception is escaping the span's scope i.e. former option `:escaping?` is true.
** [ADD] `memory-mode` option for programmatically configured OTLP exporters.
** [BREAK] `retry-policy` default changed (from disabled) for programmatically configured OTLP exporters.
** [ADD] Added `steffan-westcott.clj-otel.api.baggage/get-entry`
** For all `clj-otel` functions which create a span such as `with-span!`, optional entries in `:source` map have changed:
*** [BREAK] `:fn` should be the fully qualified function name
*** [MAINT] Support for `:ns` has been deprecated and removed
*** [ADD] `:col` is the source column number
* [ADD] `:getter` and `:setter` options to generalise context propagation functions `->headers` and `headers->merged-context` for use  in applications other than Ring HTTP servers.
* [ADD] Programmatic configuration of log record exporters used for debugging.
* [BREAK] Pedestal `0.7.0` in microservices examples.
Pedestal `0.7.0` introduces its own support for OpenTelemetry, including a new interceptor `io.pedestal.http.tracing/request-tracing-interceptor`.
This overlaps functionality with `clj-otel` interceptors, so should be disabled by setting `:io.pedestal.http/tracing` to `nil` in the Pedestal service map.
* [MAINT] Clojure `1.12.0` However `clj-otel` retains compatibility with Clojure `1.10.3` and later.

=== `0.2.7` (2024-07-01)

- Bump deps
* [MAINT] OpenTelemetry `1.39.0`
** [ADD] Support for creating and setting gauges that take measurements synchronously.
Use `steffan-westcott.clj-otel.api.metrics.instrument/set!` to synchronously set a gauge to a given measurement.
** [ADD] Option to set explicit bucket boundaries advice for histograms
** [ADD] `:links` option for `add-span-data!`